package com.xx.xx;

option java_outer_classname = "TestProto";

option optimize_for = SPEED;
option java_generic_services = true;

message TestRequest_C2S {
    required int64 timestamp = 1;
}

message TestResponse_S2C {
    required int64 timestamp = 1;
}

service TestService {
    rpc testMethod (TestRequest_C2S) returns (TestResponse_S2C);
}
